src/types/tests/snapshots/tgbot__types__tests__message__external_reply_info_location.snap
---
source: src/types/tests/message.rs
expression: "ExternalReplyInfo::new(Location::new(1.0, 2.0), origin)"
---
{
  "origin": {
    "type": "hidden_user",
    "date": 1,
    "sender_user_name": "test"
  },
  "location": {
    "latitude": 1.0,
    "longitude": 2.0
  }
}
