src/types/tests/snapshots/tgbot__types__tests__message__external_reply_info_photo.snap
---
source: src/types/tests/message.rs
expression: "ExternalReplyInfo::new(vec![PhotoSize::new(\"file-id\", \"file-unique-id\", 10,\n20)], origin)"
---
{
  "origin": {
    "type": "hidden_user",
    "date": 1,
    "sender_user_name": "test"
  },
  "photo": [
    {
      "file_id": "file-id",
      "file_unique_id": "file-unique-id",
      "height": 10,
      "width": 20
    }
  ]
}
