src/types/tests/snapshots/tgbot__types__tests__message__external_reply_info_poll.snap
---
source: src/types/tests/message.rs
expression: "ExternalReplyInfo::new(Poll::from(RegularPoll::new(\"poll-id\",\n\"Rust?\").with_is_anonymous(true).with_is_closed(true).with_options([PollOption::new(\"1\",\n\"Yes\", 1000), PollOption::new(\"2\", \"No\", 0)]).with_total_voter_count(1000),),\norigin,)"
---
{
  "origin": {
    "type": "hidden_user",
    "date": 1,
    "sender_user_name": "test"
  },
  "poll": {
    "type": "regular",
    "allows_multiple_answers": false,
    "allows_revoting": false,
    "id": "poll-id",
    "is_anonymous": true,
    "is_closed": true,
    "members_only": false,
    "options": [
      {
        "persistent_id": "1",
        "text": "Yes",
        "voter_count": 1000
      },
      {
        "persistent_id": "2",
        "text": "No",
        "voter_count": 0
      }
    ],
    "question": "Rust?",
    "total_voter_count": 1000
  }
}
