src/types/tests/snapshots/tgbot__types__tests__message__external_reply_info_sticker.snap
---
source: src/types/tests/message.rs
expression: "ExternalReplyInfo::new(Sticker::new(\"file-id\", \"file-unique-id\",\nStickerType::Regular, 10, 20), origin,)"
---
{
  "origin": {
    "type": "hidden_user",
    "date": 1,
    "sender_user_name": "test"
  },
  "sticker": {
    "file_id": "file-id",
    "file_unique_id": "file-unique-id",
    "height": 10,
    "is_animated": false,
    "is_video": false,
    "type": "regular",
    "width": 20
  }
}
