src/types/tests/snapshots/tgbot__types__tests__message__external_reply_info_unknown-2.snap
---
source: src/types/tests/message.rs
expression: "ExternalReplyInfo::new(ExternalReplyData::Unknown(serde_json::json!({\"key\":\n    \"value\"})),\norigin).with_chat(ChannelChat::new(1,\n\"test\")).with_has_media_spoiler(true).with_link_preview_options(LinkPreviewOptions::default()).with_message_id(1)"
---
{
  "origin": {
    "type": "hidden_user",
    "date": 1,
    "sender_user_name": "test"
  },
  "chat": {
    "type": "channel",
    "id": 1,
    "title": "test"
  },
  "has_media_spoiler": true,
  "link_preview_options": {},
  "message_id": 1,
  "key": "value"
}
