src/types/tests/snapshots/tgbot__types__tests__message__external_reply_info_unknown.snap
---
source: src/types/tests/message.rs
expression: "ExternalReplyInfo::new(ExternalReplyData::Unknown(serde_json::json!({\"key\":\n    \"value\"})), origin.clone(),)"
---
{
  "origin": {
    "type": "hidden_user",
    "date": 1,
    "sender_user_name": "test"
  },
  "key": "value"
}
